Update the registry api to match CLI requirements #137 (#113)
Change current feature API to match CLI
